--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>AKORGIS - Aktif Organisasi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#contact">Kontak</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#login">Masuk</a>
+                        <a class="btn btn-primary" href="#login">Masuk</a>
                     </li>
                 </ul>
             </div>
