--- a/index.html
+++ b/index.html
@@ -442,6 +442,37 @@
         </div>
     </section>
 
+    <!--Subscribe section-->
+    <section id="subscribe">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Subscribe</h2>
+                    <h3 class="section-subheading text-muted">Dapatkan dan Jangan Lewatkan Semua Tentang AKORGIS</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                   <form name="getSubscribe" id="subscribeForm" novalidate="">
+                       <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Email Anda*" id="email" required data-validation-reqired-message="Masukkan email Anda.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="clearfix"></div>
+                                <div class="col-lg-12 text-center">
+                                    <div id="success"></div>
+                                    <button type="submit" class="btn btn-xl">Subscribe</button>
+                                </div>
+                            </div>
+                       </div>
+                   </form> 
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="row">
