tambah form subscribe

--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 text-center">
                    <form name="getSubscribe" id="subscribeForm" novalidate="">
                        <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6 text-center">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Email Anda*" id="email" required data-validation-reqired-message="Masukkan email Anda.">
+                                    <input type="text"" class="form-control" placeholder="Email Anda*" id="email" required data-validation-reqired-message="Masukkan email Anda.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="clearfix"></div>
