button dan input subscribe udah di tengah

--- a/index.html
+++ b/index.html
@@ -453,9 +453,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                   <form name="getSubscribe" id="subscribeForm" novalidate="">
+                   <form name="getSubscribe" id="subscribeForm" novalidate="" class="subscribe">
                        <div class="row">
-                            <div class="col-md-6 text-center">
+                            <div class="col-md-4">
+                                
+                            </div>
+                            <div class="col-md-4 text-center">
                                 <div class="form-group">
                                     <input type="text"" class="form-control" placeholder="Email Anda*" id="email" required data-validation-reqired-message="Masukkan email Anda.">
                                     <p class="help-block text-danger"></p>
@@ -465,6 +468,9 @@
                                     <div id="success"></div>
                                     <button type="submit" class="btn btn-xl">Subscribe</button>
                                 </div>
+                            </div>
+                            <div class="col-md-4">
+                                
                             </div>
                        </div>
                    </form> 
