--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    <a href="https://amikom.ac.id/">
+                        <img src="img/logos/logo_amikom.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -460,7 +460,7 @@
                             </div>
                             <div class="col-md-4 text-center">
                                 <div class="form-group">
-                                    <input type="text"" class="form-control" placeholder="Email Anda*" id="email" required data-validation-reqired-message="Masukkan email Anda.">
+                                    <input type="text"" class="form-control" placeholder="Email Anda *" id="email" required data-validation-reqired-message="Masukkan email Anda.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="clearfix"></div>
