--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Tentang</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Perkenalan dan Perjalanan AKORGIS.</h3>
                 </div>
             </div>
             <div class="row">
@@ -242,11 +242,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2017</h4>
+                                    <h4 class="subheading">Awal untuk Kami dan Dunia</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Di tahun inilah kami membentuk dan melahirkan sebuah startup yang berfokus pada membantu semua perkumpulan yang ada. Disinilah awal dari kami untuk mengembangkan sesuatu yang lebih besar lagi.</p>
                                 </div>
                             </div>
                         </li>
@@ -256,11 +256,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Mei 2017</h4>
+                                    <h4 class="subheading">AKORGIS terlahir!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Setelah melalui banyak tahap perancangan, percobaan, pembangunan, dan sebagainya berbuahkan sebuah hasil yang mampu membantu banyak pengguna ke depannya.</p>
                                 </div>
                             </div>
                         </li>
@@ -270,11 +270,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>Juni 2017</h4>
+                                    <h4 class="subheading">Pengembangan Lebih Lanjut</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Dari fase sebelumnya yang telah dikembangkan, kami terus melakukan dan mengasah lebih dalam untuk AKORGIS yang lebih sempurna dari sebelumnya.</p>
                                 </div>
                             </div>
                         </li>
@@ -284,19 +284,19 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Saat Ini 2017 - </h4>
+                                    <h4 class="subheading">Terus dan Selamanya</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">AKORGIS akan terus disempurnakan oleh setiap tim dan individu yang mengambil peran dalam pembangunan sistem ini agar terus berjalan dan berhasil. Serta, tidak lupa untuk setiap pengguna yang menyukseskan sistem ini supaya terus melakukan kebaikan secara teknologi.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Jadilah Bagian
+                                    <br>dari
+                                    <br>AKORGIS!</h4>
                             </div>
                         </li>
                     </ul>
@@ -319,7 +319,7 @@
                     <div class="team-member">
                         <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
                         <h4>Reza Hanif Malik Fajar <br>16.11.0357</h4>
-                        <p class="text-muted">Ketua Project</p>
+                        <p class="text-muted">Project Leader</p>
                         <ul class="list-inline social-buttons">
                               <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -331,7 +331,7 @@
                     <div class="team-member">
                         <img src="img/team/5.jpg" class="img-responsive img-circle" alt="">
                         <h4>Aji Samudera <br>16.11.0358</h4>
-                        <p class="text-muted">CSS Coder</p>
+                        <p class="text-muted">Full-stack Developer</p>
                         <ul class="list-inline social-buttons">
                                <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -343,7 +343,7 @@
                     <div class="team-member">
                         <img src="img/team/7.jpg" class="img-responsive img-circle" alt="">
                         <h4>Naurah Nazzifah <br>16.11.0349</h4>
-                        <p class="text-muted">HTML Coder</p>
+                        <p class="text-muted">Full-stack Developer</p>
                         <ul class="list-inline social-buttons">
                               <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -357,7 +357,7 @@
                     <div class="team-member">
                         <img src="img/team/6.jpg" class="img-responsive img-circle" alt="">
                         <h4>Bonifasius Henri Suni<br>16.11.0362</h4>
-                        <p class="text-muted">Anggota</p>
+                        <p class="text-muted">Java Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -369,7 +369,7 @@
                     <div class="team-member">
                         <img src="img/team/8.jpg" class="img-responsive img-circle" alt="">
                         <h4>Rahman Bayu W<br>16.11.0388</h4>
-                        <p class="text-muted">Anggota</p>
+                        <p class="text-muted">Java Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://www.facebook.com/rahman.bayuw"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -379,7 +379,7 @@
                 </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Sebuah kerja keras dan cerdas dibalut dengan kebersamaan dan sportifitas serta pola pikir cerdas kreatif mampu membangun dan melahirkan ide-ide dan karya yang inovatif dan menggebrak sebuah industri tinggi secara kecil dan besar.</p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-<<<<<<< HEAD
                     <a href="https://amikom.ac.id/">
                         <img src="img/logos/logo_amikom.png" class="img-responsive img-centered" alt="">
                     </a>
@@ -408,11 +407,6 @@
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-=======
-                   <a href="#">
-                        <p>Supported by : </p>
-                        <img src="img/team/amikom.png" class="img-responsive img-centered" alt="">
->>>>>>> 9903566ca6f7e54adc4866eeb55a1bd313be9b02
                     </a>
                 </div>
             </div>
@@ -520,7 +514,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Kebijakan Privasiy</a>
+                        <li><a href="#">Kebijakan Privasi</a>
                         </li>
                         <li><a href="#">Syarat & Ketentuan</a>
                         </li>
