nambah satu user

--- a/index.html
+++ b/index.html
@@ -377,6 +377,19 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/linus.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Linus Sebastian<br>16.11.6969</h4>
+                        <p class="text-muted">Content Creator</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="https://www.facebook.com/linustechtips"><i class="fa fa-facebook"></i></a>
+                            </li>
+        
+                        </ul>
+                    </div>
+                </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Sebuah kerja keras dan cerdas dibalut dengan kebersamaan dan sportifitas serta pola pikir cerdas kreatif mampu membangun dan melahirkan ide-ide dan karya yang inovatif dan menggebrak sebuah industri tinggi secara kecil dan besar.</p>
@@ -458,7 +471,6 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <!--Subscribe section-->
     <section id="subscribe">
         <div class="container">
