--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#contact">Kontak</a>
                     </li>
                     <li>
-                        <a class="btn btn-danger" href="login.html">Masuk</a>
+                        <a class="btn btn-dongker" href="login.html">Masuk</a>
                     </li>
                 </ul>
             </div>
@@ -378,18 +378,6 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/linus.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Linus Sebastian<br>16.11.6969</h4>
-                        <p class="text-muted">Content Creator</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="https://www.facebook.com/linustechtips"><i class="fa fa-facebook"></i></a>
-                            </li>
-        
-                        </ul>
-                    </div>
-                </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Sebuah kerja keras dan cerdas dibalut dengan kebersamaan dan sportifitas serta pola pikir cerdas kreatif mampu membangun dan melahirkan ide-ide dan karya yang inovatif dan menggebrak sebuah industri tinggi secara kecil dan besar.</p>
@@ -556,7 +544,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Amikom Computer Club</h2>
                                 <p class="item-intro text-muted">AMCC; Organisasi Mahasiswa IT.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                                <img class="img-responsive img-centered" src="img/portfolio/roundicons-free1.jpg" alt="">
                                 <p>Amikom Computer Club (AMCC) merupakan sebuah organisasi sekaligus Unit Kegiatan Mahasiswa yang bergerak dalam bidang IT, berbasis di Universitas Amikom Yogyakarta. AMCC memiliki 5 divisi untuk keilmuan yang dapat member/mahasiswa/i minati untuk dipelajari sesuai minat mereka, yaitu: Web Programming, Mobile Programming, Desktop Programming, Computer Network, Hardware & Software.</p>
                                 <p>
                                     <strong>Ingin info lebih dalam tentang AMCC?</strong> kunjungi websitenya di<a href="https://amcc.or.id"> AMCC</a>, atau kunjungi halaman profilnya di<a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc"> sini</a>.</p>
