--- a/index.html
+++ b/index.html
@@ -323,6 +323,40 @@
         </div>
     </section>
 
+<!--Subscribe section-->
+<section id="subscribe">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Subscribe</h2>
+                <h3 class="section-subheading text-muted">Langganan sekarang dan dapatkan terus kabar tentang Akorgis.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <form name="getSubscribe" id="subscribeForm">
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email Anda*" id="email" required data-validation-required-message="Masukan email Anda">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                                <div class="clearfix">
+                                    <div class="col-lg-12 text-center">
+                                        <div id="berhasil">
+                                            <button type="submit" class="btn btn-xl">Subscribe</button>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
     <footer>
         <div class="container">
             <div class="row">
