--- a/index.html
+++ b/index.html
@@ -269,10 +269,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                   <a href="#">
-                        <p>Supported by : </p>
-                        <img src="img/team/amikom.png" class="img-responsive img-centered" alt="">
+                   <a href="https://amikom.ac.id/">
+                        <!--<p>Supported by : </p>-->
+                        <img src="img/logos/logo_amikom.png" class="img-responsive img-centered" alt="">
                     </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://wordpress.com/"></a>
+                    <img src="img/logos/wordpress.jpg" class="img-responsive img-centered"></a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/aetuts.jpg" class="img-responsive img-centered">
                 </div>
             </div>
         </div>
@@ -361,18 +369,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Hack Cipta &copy; AKORGIS | 2018</span>
+                    <span class="copyright">Hak Cipta &copy; AKORGIS | 2018</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                        <li><a href="https://www.facebook.com/akorgis"><i class="fa fa-facebook"></i></a>
                             </li>
-        
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="https://kataku.xyz/">Situs Ketua Project</a>
                         </li>
                     </ul>
                 </div>
