--- a/donasi.html
+++ b/donasi.html
@@ -45,7 +45,7 @@
       <textarea placeholder="Masukan dukungan atau pesan"></textarea>
       <h1>Metode Pembayaran</h1>
       <div>
-        <input type="radio" name="trans" value="Transfer BCA">Transfer BCA <br>
+        <input type="drop down" name="trans" value="Transfer BCA">Transfer BCA <br>
       </div>
       <div>
         <input type="radio" name="trans" value="Transfer BRI">Transfer BRI <br>
