tambah search bar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                       <input type="text" name="search" placeholder="Search.."> 
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#services">Layanan</a>
                     </li>
                     <li>
