tambah search bar

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                       <input type="text" name="search" placeholder="Search.."> 
+                       <input class="cari-box" type="text" name="search" placeholder="Search..">
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Layanan</a>
