boni kau hancurkan index nya

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                       <input class="cari-box" type="text" name="search" placeholder="Search..">
+                       <input class="cari-box" type="text" name="search" placeholder="Cari..">
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Layanan</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Event</a>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Tim</a>
@@ -282,7 +282,7 @@
                     <img src="img/logos/wordpress.jpg" class="img-responsive img-centered"></a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="https://aetuts.com/">
                         <img src="img/logos/aetuts.jpg" class="img-responsive img-centered">
                 </div>
             </div>
