--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Akorgis - Aktif Organisasi</title>
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -66,7 +66,7 @@
                         <a class="page-scroll" href="#contact">Kontak</a>
                     </li>
                     <li>
-                        <a class="btn btn-danger" href="login.html">Masuk</a>
+                        <a class="btn" href="login.html">Masuk</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in"></div>
                 <div class="intro-heading">aktif organisasi</div>
-                <a href="#services" class="page-scroll btn btn-xl">Kenali Lebih lanjut</a>
+                <a href="#services" class="page-scroll btn btn-xl">Scroll Bawah</a>
             </div>
         </div>
     </header>
@@ -273,13 +273,12 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                    <a href="https://amikom.ac.id/">
-                        <!--<p>Supported by : </p>-->
                         <img src="img/logos/logo_amikom.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="https://wordpress.com/"></a>
-                    <img src="img/logos/wordpress.jpg" class="img-responsive img-centered"></a>
+                    <img src="img/wordpress.png" class="img-responsive img-centered"></a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="https://aetuts.com/">
@@ -376,8 +375,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Subscribe</h2>
-                <h3 class="section-subheading text-muted">Langganan sekarang dan dapatkan terus kabar tentang Akorgis.</h3>
+                <h2 class="section-light text-light">Subscribe</h2>
+                <h3 class="section-subheading text-light">Langganan sekarang dan dapatkan terus kabar tentang Akorgis.</h3>
             </div>
         </div>
         <div class="row">
@@ -393,7 +392,7 @@
                                 <div class="clearfix">
                                     <div class="col-lg-12 text-center">
                                         <div id="berhasil">
-                                            <button type="submit" class="btn btn-xl">Subscribe</button>
+                                            <button type="submit" class="btn btn-dark">Subscribe</button>
                                         </div>
                                     </div>
                                 </div>
@@ -405,9 +404,31 @@
     </div>
 </section>
 
+<!--Get App section-->
+    <section id="getapp">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Download AKORGIS&copy;</h2>
+                    <h3 class="section-subheading">Dapatkan kelebihan dan kemudahan dengan aplikasi Akorgis. Kini tersedia di Play Store dan App Store..</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                            <div class="clearfix"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <footer>
         <div class="container">
-            <div class="bg-light-gray">
             <div class="row">
                 <div class="col-md-3">
                     <span class="copyright">Hak Cipta &copy; AKORGIS | 2018</span>
@@ -418,7 +439,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
     </footer>
 
     <!-- Portfolio Modals -->
