--- a/donasi.html
+++ b/donasi.html
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 	<script src="js/bootstrap.js"></script>
+  <link rel="stylesheet" href="css/form-basic.css">
+
 </head>
+
+
 <body>
   <!-- Navigasi -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -33,31 +37,81 @@
   </div>
 </nav>
 
-<!-- Event -->
-<div class="container bg-light">
-  <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-5 bg-white txt">
-      <h1>Jumlah Donasi</h1>
-      <p>Masukan jumlah donasi minimal Rp 10.000</p>
-      <input type="number" name="" placeholder="0">
-      <h1>Dukungan</h1>
-      <textarea placeholder="Masukan dukungan atau pesan"></textarea>
-      <h1>Metode Pembayaran</h1>
-      <div>
-        <input type="drop down" name="trans" value="Transfer BCA">Transfer BCA <br>
-      </div>
-      <div>
-        <input type="radio" name="trans" value="Transfer BRI">Transfer BRI <br>
-      </div>
-      <div>
-        <input type="radio" name="trans" value="Transfer BNI">Transfer BNI <br>
-      </div>
-      <button>DONASI</button>
-    </div>
-    <div class="col-md-3"></div>    
-  </div>  
-</div>
+<!-- donasi -->
+          <form class="form-basic" method="post" action="Event.html">
+
+            <div class="form-title-row">
+                <h1>DONASI</h1>
+            </div>
+
+            <div class="form-row">
+                <label>
+                    <span>Jumlah Donasi</span>
+                    <input type="number" name="name">
+                </label>
+            </div>
+
+            <div class="form-row">
+                <label><span>Metode Pembayaran</span></label>
+                <div class="form-radio-buttons">
+
+                    <div>
+                        <label>
+                            <input type="radio" name="radio">
+                            <span>Transfer BRI</span>
+                        </label>
+                    </div>
+
+                    <div>
+                        <label>
+                            <input type="radio" name="radio">
+                            <span>Transfer BNI</span>
+                        </label>
+                    </div>
+
+                    <div>
+                        <label>
+                            <input type="radio" name="radio">
+                            <span>Transfer BCA</span>
+                        </label>
+                    </div>
+
+                    <div>
+                        <label>
+                            <input type="radio" name="radio">
+                            <span>Transfer Mandiri</span>
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input type="radio" name="radio">
+                            <span>GO-PAY</span>
+                        </label>
+                    </div>
+
+                </div>
+            </div>
+            <div class="form-row">
+                <label>
+                    <span>Dukungan atau komentar</span>
+                    <textarea name="textarea"></textarea>
+                </label>
+            </div>
+
+            <div class="form-row">
+                <label>
+                  <span></span>
+                    <input type="checkbox" name="checkbox" checked>I agree to the <a href="#">terms and conditions</a>
+                </label>
+            </div>
+
+
+            <div class="form-row">
+                <button type="submit">Submit</button>
+            </div>
+
+        </form>
+
 
 </body>
 </html>
