rework ce,ap dan css

--- a/APersonal.html
+++ b/APersonal.html
@@ -34,62 +34,35 @@
 </nav>
 
 <!-- Event -->
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <img src="image/1.jpg" class="img">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label>UKM / Organisasi</label>
-      </div>
-      <div class="col">
-        <label>HMIF Amikom</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label>Kampus</label>
-      </div>
-      <div class="col">
-        <label>Univeersitas Amikom Yogyakarta</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label>Email</label>
-      </div>
-      <div class="col">
-        <label>email@UKM.org</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label>Telp</label>
-      </div>
-      <div class="col">
-        <label>0123456789</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <label>Alamat</label>
-      </div>
-      <div class="col">
-        <p>Gedung BSC VI.3.1 lt.3 Universitas Amikom</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <button class="btn-primary">Edit profile</button>
-      </div>
-      <div class="col">
-        <a href="CEvent.html">
-        <button class="btn-primary">Buat Event</button>
-        </a>
-      </div>
-    </div>
+  <div  class="contentA">
+  <table>
+  <tr>
+    <td rowspan="6"><img src="image/hmif.jpg"></th>
+    <td colspan="2"><h1>Himpunan Mahasiswa Informatika</h1></td>
+  </tr>
+  <tr>
+    <td>Kampus</th>
+    <td>: Universitas Amikom Yogyakarta</td>
+  </tr>
+  <tr>
+    <td>Email</td>
+    <td>: hmif@ukm.org</td>
+  </tr>
+  <tr>
+    <td>No. Telp</td>
+    <td>: 081234567890</td>
+  </tr>
+  <tr>
+    <td>Alamat</td>
+    <td>: Gedung BSC lt.3 VI.3.1 Universitas Amikom Yogyakarta</td>
+  </tr>
+  <tr>
+    <td><button class="btn-primary">Edit Profile</button>
+    <td>
+      <a href="CEvent.html"><button class="btn-primary">Galang Dana</button></a>
+    </td>
+  </tr>
+</table>
   </div>
 
 </body>
