event.html rewrite

--- a/event.html
+++ b/event.html
@@ -34,25 +34,53 @@
 </nav>
 
 <!-- Event -->
+<div class="event">
+  <div class="gallery">
+  <a target="_blank" href="eventIn.html">
+    <img src="image/4.jpg" alt="Cinque Terre" >
+  </a>
+  <div class="desc">
+    <h1>Seminar Nasional</h1>
+    <p>KOMA</p>
+    <p>Universitas Amikom Yogyakarta</p>
+
+  </div>
+</div>
+
 <div class="gallery">
   <a target="_blank" href="eventIn.html">
-    <img src="image/1.jpg" alt="Cinque Terre" >
+    <img src="image/4.jpg" alt="Cinque Terre" >
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">
+    <h1>Seminar Nasional</h1>
+    <p>KOMA</p>
+    <p>Universitas Amikom Yogyakarta</p>
+
+  </div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="#">
     <img src="image/2.jpg" alt="Cinque Terre" >
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">
+    <h1>Open Donasi</h1>
+    <p>UKM lain</p>
+    <p>Universitas Amikom Yogyakarta</p>
+
+  </div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="#">
     <img src="image/3.jpg" alt="Cinque Terre" >
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">
+    <h1>Bakti Sosial</h1>
+    <p>UKM others</p>
+    <p>Universitas Amikom Yogyakarta</p>
+
+  </div>
 </div>
 </body>
 </html>
