--- a/eventIn.html
+++ b/eventIn.html
@@ -34,28 +34,31 @@
 </nav>
 
 <!-- Event -->
-<div class="container">
-  <h1>Event</h1>
-  <div class="row">
-    <div class="col-md-7 mgr">
-      <img src="image/1.jpg" width="400px">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <a href="#">Preview Proposal</a>
-    </div>
-    <div class="col-md-4 mgr bg-light">
-      <h1>Rp 1.500.000</h1>
-      <p>Target Rp 5.000.000</p>
-      <button>Share</button>
-      <button>Donasi</button>
-    </div>
-  </div>  
+<div class="contentB">
+  <table>
+    <tr>
+      <td>
+        <img src="image/4.jpg">
+      </td>
+      <td>
+        <h1>SEMINAR NASIONAL</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+          Klik disini untuk <a href="#">Lihat Proposal Kegiatan</a>
+        </p>
+        <br>
+        <h2>Rp 1.500.000</h2>
+        <p>dari target Rp 5.000.000</p>
+        <button>Share</button>
+        <a href="donasi.html"><button>Donasi</button></a>
+      </td>
+    </tr>
+  </table>
 </div>
 
 </body>
