tambah section download aplikasi

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <a class="page-scroll" href="#contact">Kontak</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#subscribe">Subscribe</a>
+                    </li>
+                    <li>
                         <a class="btn" href="login.html">Masuk</a>
                     </li>
                 </ul>
@@ -204,7 +207,7 @@
                     <div class="team-member">
                         <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
                         <h4>Reza Hanif Malik Fajar <br>16.11.0357</h4>
-                        <p class="text-muted">Ketua Project</p>
+                        <p class="text-muted">Project Leader</p>
                         <ul class="list-inline social-buttons">
                               <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -216,7 +219,7 @@
                     <div class="team-member">
                         <img src="img/team/5.jpg" class="img-responsive img-circle" alt="">
                         <h4>Aji Samudera <br>16.11.0358</h4>
-                        <p class="text-muted">CSS Coder</p>
+                        <p class="text-muted">Full-stack Developer</p>
                         <ul class="list-inline social-buttons">
                                <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -228,7 +231,7 @@
                     <div class="team-member">
                         <img src="img/team/7.jpg" class="img-responsive img-circle" alt="">
                         <h4>Naurah Nazzifah <br>16.11.0349</h4>
-                        <p class="text-muted">HTML Coder</p>
+                        <p class="text-muted">Full-stack Developer</p>
                         <ul class="list-inline social-buttons">
                               <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -242,7 +245,7 @@
                     <div class="team-member">
                         <img src="img/team/6.jpg" class="img-responsive img-circle" alt="">
                         <h4>Bonifasius Henri Suni<br>16.11.0362</h4>
-                        <p class="text-muted">Anggota</p>
+                        <p class="text-muted">Web Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -254,7 +257,7 @@
                     <div class="team-member">
                         <img src="img/team/8.jpg" class="img-responsive img-circle" alt="">
                         <h4>Rahman Bayu W<br>16.11.0388</h4>
-                        <p class="text-muted">Anggota</p>
+                        <p class="text-muted">Web Developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://www.facebook.com/rahman.bayuw"><i class="fa fa-facebook"></i></a>
                             </li>
@@ -296,27 +299,27 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Quick Links</h2>
-                    <h3 class="section-subheading text-muted">Beberepa link yang mengarahkan ke page yang lebig membantu.</h3>
+                    <h3 class="section-subheading text-muted">Beberepa link yang mengarahkan ke page yang lebih membantu.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/web.png" class="img-responsive img-circle" alt="">
+                        <a href="http://kataku.xyz/"><img src="img/web.png" class="img-responsive img-circle" alt=""></a>
                         <a href="http://kataku.xyz/"><h4>Situs Punya Ketua</h4></a>
                         <p class="text-muted">Website yang pernah ketua bangun.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/donation.png" class="img-responsive img-circle" alt="">
+                        <a href="donasi.html"><img src="img/donation.png" class="img-responsive img-circle" alt=""></a>
                         <a href="donasi.html"><h4>Donasi</h4></a>
                         <p class="text-muted">Donasikan untuk sebagian perkmpulan.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/event.png" class="img-responsive img-circle" alt="">
+                        <a href="event.html"><img src="img/event.png" class="img-responsive img-circle" alt=""></a>
                         <a href="event.html"><h4>Event</h4></a>
                         <p class="text-muted">Beberapa event / acara yang bisa Anda ikuti.</p>
                     </div>
@@ -410,20 +413,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Download AKORGIS&copy;</h2>
-                    <h3 class="section-subheading">Dapatkan kelebihan dan kemudahan dengan aplikasi Akorgis. Kini tersedia di Play Store dan App Store..</h3>
+                    <h3 class="section-subheading">Dapatkan kelebihan dan kemudahan dengan aplikasi Akorgis. Kini tersedia di Play Store dan App Store.</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                            <div class="clearfix"></div>
-                        </div>
-                    </form>
+                <div class="col-lg-offset-2">
+                       <a href="https://playstore.com/"><img src="img/play store.png" alt="Android Play Store" width="340"></a>
+                       <a href="https://appstore.com/"><img src="img/app store.png" alt="iOS App Store" width="300"></a>
+                   </div> 
                 </div>
-            </div>
-        </div>
     </section>
 
 
