--- a/donasi.html
+++ b/donasi.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Navigasi -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  <a class="navbar-brand" href="#">AKORGIS |</a>
+  <a class="navbar-brand" href="index.html">AKORGIS |</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -51,16 +51,12 @@
                 </label>
             </div>
 
-            <div class="form-row">
+            <div class="container">
                 <label><span>Metode Pembayaran</span></label>
                 <div class="form-radio-buttons">
 
-                    <div>
-                        <label>
-                            <input type="radio" name="radio">
-                            <span>Transfer BRI</span>
-                        </label>
-                    </div>
+                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials
+    <span class="caret"></span></button>
 
                     <div>
                         <label>
