--- a/index.html
+++ b/index.html
@@ -324,6 +324,13 @@
                         <p class="text-muted">Beberapa event / acara yang bisa Anda ikuti.</p>
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <a href="daftarukm.html"><img src="img/ukm.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="event.html"><h4>Daftar Organisasi</h4></a>
+                        <p class="text-muted">Daftarkan organisasi atau perkumpulan Anda sekarang!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
