--- a/index.html
+++ b/index.html
@@ -300,16 +300,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <a href="donasi.html"><img src="img/donation.png" class="img-responsive img-circle" alt=""></a>
-                        <a href="donasi.html"><h4>Donasi</h4></a>
+                        <a href="event.html"><img src="img/donation.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="donasi.html"><h4>Event & Donasi</h4></a>
                         <p class="text-muted">Donasikan untuk sebagian perkmpulan.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <a href="event.html"><img src="img/event.png" class="img-responsive img-circle" alt=""></a>
-                        <a href="event.html"><h4>Event</h4></a>
-                        <p class="text-muted">Beberapa event / acara yang bisa Anda ikuti.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -406,13 +399,13 @@
     <section id="getapp">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Download AKORGIS&copy;</h2>
+                <h2 class="section-heading">Download AKORGIS&copy;</h2>
+                <div class="col-6">
                     <h3 class="section-subheading">Dapatkan kelebihan dan kemudahan dengan aplikasi Akorgis. Kini tersedia di Play Store dan App Store.</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-2">
+                <div class="col-6">
                        <a href="https://playstore.com/"><img src="img/play store.png" alt="Android Play Store" width="340"></a>
                        <a href="https://appstore.com/"><img src="img/app store.png" alt="iOS App Store" width="300"></a>
                    </div> 
@@ -426,12 +419,12 @@
                 <div class="col-md-3">
                     <span class="copyright">Hak Cipta &copy; AKORGIS | 2018</span>
                 </div>
-                <div class="col-md-9">
+                <!--<div class="col-md-9">
                     <ul class="list-inline quicklinks">
                         <li class="text-right"><a href="#">Help</a>
                         </li>
                     </ul>
-                </div>
+                </div>-->
     </footer>
 
     <!-- Portfolio Modals -->
