--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="login-box">
 		<div class="left-box">
-			<h1>Daftar <a href="index.html"> AKORGIS</a></h1>
+			<h1>Daftar AKORGIS</h1>
 			<input type="text" name="username" placeholder="Username">
 			<input type="text" name="email" placeholder="Email">
 			<input type="password" name="password" placeholder="Password">
@@ -16,6 +16,7 @@
 			<input type="password" name="password2" placeholder="Ulangi Password">
 
 			<input type="submit" name="signup-button" value="Daftar">
+			<h5>Kembali ke <a href="index.html">halaman utama</a> atau <a href="login.html">masuk</a></h5>
 		</div>
 
 		<div class="right-box">
