--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Script Bootstrap dan CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -45,7 +46,7 @@
                         <a class="page-scroll" href="#services">Layanan</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#organisasi">organisasi</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Tim</a>
@@ -71,7 +72,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"></div>
-                <div class="intro-heading">aktif organisasi</div>
+                <div class="judul">AKORGIS</div>
+                <div class="intro-heading-small">Aktif Organisasi</div>
                 <a href="#services" class="page-scroll btn btn-xl">Scroll Bawah</a>
             </div>
         </div>
@@ -120,7 +122,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">Organisasi</h2>
                     <h3 class="section-subheading text-muted">Berbagai UKM, grup, perkumpulan, kominitas, dll yang tergabung ARKORGIS.</h3>
                 </div>
             </div>
@@ -137,7 +139,6 @@
                     <div class="portfolio-caption">
                         <h4>Amikom Computer Club (AMCC)</h4>
                         <p class="text-muted">Organisasi Mahasiswa IT</p>
-                        <br> <p>Amikom Computer Club (AMCC) merupakan sebuah organisasi sekaligus Unit Kegiatan Mahasiswa yang bergerak dalam bidang IT, berbasis di Universitas Amikom Yogyakarta. AMCC memiliki 5 divisi untuk keilmuan yang dapat member/mahasiswa/i minati untuk dipelajari sesuai minat mereka, yaitu: Web Programming, Mobile Programming, Desktop Programming, Computer Network, Hardware & Software. <strong>informasi lebih lanjut</strong><a href="https://amcc.or.id"> AMCC</a>. </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -151,11 +152,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>KOMA</h4>
-                        <p class="text-muted">Komunitas Multimedia Amikom</p> <br> 
-                        <p>
-                            KOMA kepanjangan dari Komunitas Multimedia Amikom,merupakan sebuah komunitas multimedia yang pada awalnya beranggotakan mahasiswa-mahasiswa Universitas AMIKOM Yogyakarta yang mempunyai hobby di bidang multimedia
-                            <strong>informasi lebih lanjut</strong><a href="http://info.koma.or.id "> KOMA</a>. </p>                            
-                        </p>
+                        <p class="text-muted">Komunitas Multimedia Amikom</p>
                     </div> 
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -172,7 +169,9 @@
                         <p class="text-muted">Himpunan Mahasiswa Informatika</p>
                     </div>
                 </div>
-               
+                <div class="more">
+                    <button>More <i class="fas fa-chevron-circle-down"></i></button>
+                </div>
                 </div>
             </div>
         </div>
@@ -510,11 +509,10 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                                <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
+                                <h2>Semnas A.I.</h2>
+                                <p class="item-intro text-muted">Mendalami ilmu tentang ilmu keceradasan buatan (Artificial Intelligence).</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/semnas_ai.jpg" alt="">
+                                <p>Seminar Nasional 2018 tentang Artificial Intelligence datang membawa tema "Mengoptimalkan Kecerdasan Buatan  dalam Bidang Digital Creative pada Era Teknologi Informasi"<br/>Pemateri 1: Pak Beno Kunto Pradekso, M.Sc (CEO PT.Solusi 247)<br/>Pemateri 2: Bu Dessi Puji Lestari, Ph.D (Lektor Institut Teknologi Bandung)<br/>Moderator: Satya Abdul H. B., S.Kom (Hubungan Masyarakat Universitas AMIKOM Yogyakarta)<br><br>Info lebih lanjut kunjungi <a href="http://semnas.hmifamikom.or.id/">website semnas</a> atau pantau medsos HMIF.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
