--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html>
 <head>
 	<title>Login Form</title>
@@ -15,7 +15,8 @@
 			<input type="password" name="" placeholder="Masukkan password">
 			<input type="submit" name="" value="Login">
 			<a href="#">Lupa password?</a><br/>
-			<a href="registration.html">Belum punya akun?</a>
+			<a href="registration.html">Belum punya akun?</a><br/>
+			<a href="index.html">Halaman Utama</a>
 		</form>
 	</div>
 </body>
