Fix event login or not login

--- a/eventNIn.html
+++ b/eventNIn.html
@@ -35,31 +35,21 @@
               <a class="nav-link" href="EventLogin.html">Donasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="CEvent.html">Galang Dana</a>
+              <a class="nav-link" href="login.html">Galang Dana</a>
             </li>
             <li class="nav-item">
-
-              <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                  <i class="fas fa-user-circle"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-                  <h4 class="dropdown-header">User</h4>
-                  <a class="dropdown-item" href="persAkunUKM.html">View Profile</a>
-                  <a class="dropdown-item" href="EventNLogin.html">Sign Out</a>
-                </div>
-              </div>
-   
+              <a class="nav-link" href="login.html">Masuk</a>
             </li>    
         </ul>
     </div>  
   </nav>
 
 <!-- content -->
+
 <div class="container">
   <h1>DRAMA MUSIKAL</h1>
   <div class="row eventIN">
-    <div class="col colEv">
+    <div class="col colEv1">
       <img src="image/dramus.png">
       <p class="text-justify">Ikatan Keluarga Nasrani Amikom (IKNA) dari Unit Kegiatan Mahasiswa di Universitas Amikom Yogyakarta akan mempersembahkan Drama Musikal Juli 2018 mendatang. Drama Musikal yang berjudul 'Lentera dalam Elegi' tersebut rencananya akan ditampilkan pada Kamis (5/7/2018).<br>
 
@@ -74,13 +64,14 @@
     <div class="col colEv">
       <h2>Rp.1.459.000</h2>
       <p>target terkumpul Rp.9.000.000</p>
-      <button class="btnDonasi" onclick="location.href='donasi.html'">Donasi</button>
+      <button class="btnDonasi" onclick="location.href='login.html'">Donasi</button>
       <button class="btnShare"><i class="fab fa-facebook-f"></i> Share</button>
       <p>Mau menjadi sponsor kegitan ini? <a href="#">Klik disini</a></p>
       <p><strong>Campaign ini mencurigakan?</strong><a href="#"> Laporkan</a></p>
     </div>
   </div>
 </div>
+
  <!-- footer -->
 <div class="footer">
   <div class="container">
@@ -120,7 +111,6 @@
     </div>
   </div>
 </div>  
-  
 
 </body>
 
