--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <a href="event.html"><img src="img/donation.png" class="img-responsive img-circle" alt=""></a>
-                        <a href="donasi.html"><h4>Event & Donasi</h4></a>
+                        <a href="EventNLogin.html"><img src="img/donation.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="EventNLogin.html"><h4>Event & Donasi</h4></a>
                         <p class="text-muted">Donasikan untuk sebagian perkmpulan.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <a href="daftarukm.html"><img src="img/ukm.png" class="img-responsive img-circle" alt=""></a>
-                        <a href="event.html"><h4>Daftar Organisasi</h4></a>
+                        <a href="login.html"><img src="img/ukm.png" class="img-responsive img-circle" alt=""></a>
+                        <a href="login.html"><h4>Daftar Organisasi</h4></a>
                         <p class="text-muted">Daftarkan organisasi atau perkumpulan Anda sekarang!</p>
                     </div>
                 </div>
