--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@ o<!DOCTYPE html>
 	<div class="loginbox">
 		<img src='img/login.png' class="avatar">
 		<h1>Masuk Disini</h1>
-		<form>
+		<form action="EventLogin.html">
 			<p>Username</p>
 			<input type="text" name="" placeholder="Masukkan username">
 			<p>Password</p>
