--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
 
 			<input type="password" name="password2" placeholder="Ulangi Password">
 
-			<input type="submit" name="signup-button" value="Daftar">
+			<input type="submit" name="signup-button" value="Daftar" onclick="location.href='login.html'">
 			<h5>Kembali ke <a href="index.html">halaman utama</a> atau <a href="login.html">masuk</a></h5>
 		</div>
 
