--- a/AkunCampaignNUKM.html
+++ b/AkunCampaignNUKM.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg sticky-top">
-      <a class="navbar-brand" href="#">AKORGIS</a>
+      <a class="navbar-brand" href="index.html">AKORGIS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
       </button>
