--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a class="page-scroll" href="#services">Layanan</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#organisasi">organisasi</a>
+                        <a class="page-scroll" href="#portfolio">organisasi</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Tim</a>
